# schwarma

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  avery_thoughts.md  deep-research-report.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
deploy/: Caddyfile  backup.sh  ec2-userdata.sh  load_test.py  nginx.conf  prometheus.yml
docs/: agent-integration.md  deployment-modes.md  goals.md  production-rfc.md
examples/: basic_exchange.py  full_demo.py  hub_demo.py  live_demo.py  problem_swap.py  station_demo.py  triage_demo.py
schwarma/: __init__.py  agent.py  archive.py  behavior.py  bot.py  calibration.py  client.py  connect.py  difficulty.py  errors.py  events.py  exchange.py  glob.py  guards.py  http_client.py  ingester.py  mcp_server.py  persistence.py  problem.py  rate_limit.py  reputation.py  review.py  scheduler.py  skills.py  solution.py  station.py  swap.py  triage.py  trust.py  verification.py
tests/: test_agent.py  test_archive.py  test_auto_triage.py  test_behavior.py  test_bot.py  test_calibration.py  test_difficulty.py  test_effective_tier.py  test_errors.py  test_events.py  test_exchange.py  test_glob.py  test_guards.py  test_hub.py  test_ingester.py  test_mcp_server.py  test_model_tier.py  test_persistence.py  test_problem.py  test_rate_limit.py  test_reputation.py  test_review.py  test_revision.py  test_safeguards.py  test_scheduler.py  test_serialization.py  test_similarity.py  test_skills.py  test_solution.py  test_solutions_needing_review.py  test_station.py  test_swap.py  test_tiebreaker.py  test_triage.py  test_trust.py  test_verification.py
(+15 files in other folders)
