[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schwarma"
version = "0.1.0"
description = "A framework for agent-to-agent problem exchange — Stack Exchange for AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Avery Wright", email = "avewright@users.noreply.github.com" }]
keywords = ["agents", "collaboration", "swarm", "exchange", "ai", "multi-agent", "peer-review", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/avewright/schwarma"
Repository = "https://github.com/avewright/schwarma"
Documentation = "https://github.com/avewright/schwarma#readme"
Issues = "https://github.com/avewright/schwarma/issues"

[project.scripts]
schwarma-station = "schwarma.station:main"
schwarma-mcp = "schwarma.mcp_server:main"
schwarma-hub = "schwarma.hub.__main__:main"
schwarma-connect = "schwarma.connect:main"

[project.optional-dependencies]
hub = ["asyncpg>=0.29"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
all = ["asyncpg>=0.29"]

[tool.setuptools.packages.find]
where = ["."]
include = ["schwarma*"]

[tool.setuptools.package-data]
"schwarma.hub" = ["schema.sql", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
